<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeUI.homeUI"
    android:background="#66dfe7">

    <RelativeLayout
        android:id="@+id/relatives"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/roundthemev3"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hello , My name is "
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/TV_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:fontFamily="sans-serif-black"
                        android:textSize="16sp"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email "
                        android:textSize="16sp"
                        android:layout_marginEnd="8dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:paddingBottom="10dp"
                        android:fontFamily="sans-serif-black"
                        android:textSize="10sp"/>
                </TableRow>

                <Button
                    android:id="@+id/logout_button"
                    android:drawableLeft="@drawable/ic_baseline_close_24"
                    android:fontFamily="sans-serif-black"
                    android:text="logout"
                    android:textSize="45px"
                    app:strokeColor="#1CA8B1"></Button>

            </TableLayout>
        </LinearLayout>
    </RelativeLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button3"
            android:layout_width="144dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="412dp"
            android:layout_marginEnd="63dp"
            android:background="@drawable/rounded_button"
            android:text="@string/Tips"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Start_test"
            android:layout_width="137dp"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="63dp"
            android:background="@drawable/rounded_button"
            android:text="@string/Start"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="137dp"
            android:layout_height="53dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/history"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="137dp"
            android:layout_height="53dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="412dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/BmiCal"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>